tests/ui/eii/track_caller_static_errors.stderr
error: the `track_caller` attribute cannot be used on foreign statics
  --> $DIR/track_caller_static_errors.rs:5:3
   |
LL | #[track_caller]
   |   ^^^^^^^^^^^^
   |
   = help: the `track_caller` attribute can only be applied to functions

error: aborting due to 1 previous error

